# SPLISOSM

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: build.yml  tests.yml
docs/source/: api.rst  conf.py  faq.rst  gpr_api.rst  index.rst  installation.rst  methods.rst  quickstart.rst  refs.bib  requirements.txt  txquant.rst
docs/source/api/: advanced.rst  building_blocks.rst  core.rst  gpr.rst  helpers.rst  index.rst  io.rst
docs/source/tutorials/: gallery.rst  sit_mob_demo.ipynb  visium_ffpe.ipynb  visiumhd_3prime.ipynb  visiumhd_ffpe_du.ipynb  visiumhd_ont.ipynb  xenium_prime_5k.ipynb
scripts/: convert_mtx_to_h5.py  extract_xenium_codeword_dist.py  visiumhd_3p_trend_quant.sh
splisosm/: __init__.py  _chunking.py  _glmm_workers.py  _hsic_null.py  dataset.py  hyptest_fft.py  hyptest_glmm.py  hyptest_np.py  io.py  kernel.py  kernel_gpr.py  likelihood.py  logger.py  model.py  simulation.py  utils.py
src/splisosm/: __init__.py  dataset.py  gpr.py  hyptest_fft.py  hyptest_glmm.py  hyptest_np.py  kernel.py  kernel_gpr.py  simulation.py  utils.py
src/splisosm/_gpr/: __init__.py  backends.py  statistics.py
src/splisosm/glmm/: __init__.py  base.py  dataset.py  glm.py  glmm.py  likelihood.py  model.py  workers.py
src/splisosm/gpr/: __init__.py  backends.py  base.py  config.py  factory.py  fft.py  gpytorch.py  nufft.py  operators.py  sklearn.py  statistics.py
src/splisosm/hyptest/: __init__.py  _base.py  fft.py  glmm.py  np.py
src/splisosm/io/: __init__.py  visium.py  visium_hd.py  xenium.py
src/splisosm/utils/: __init__.py  _hsic_null.py  hsic.py  preprocessing.py  simulation.py  stats.py
tests/: test_dataset.py  test_gpr.py  test_hyptest_fft.py  test_hyptest_glmm.py  test_hyptest_np.py  test_io.py  test_kernel.py  test_kernel_gpr.py  test_likelihood.py  test_model.py  test_public_api.py  test_simulation.py  test_utils.py
