[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "splisosm"
version = "1.0.3"
description = "Spatial isoform statistical modeling (SPLISOSM)"
authors = [
  {name = "Jiayu Su"}
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.11, <4.0"

dependencies = [
    "numpy",
    "pandas",
    "torch",
    "scipy",
    "tqdm",
    "smoother-omics>=1.1.0",
    "matplotlib",
    "anndata"
]

[project.optional-dependencies]
dev = [
    "scanpy[leiden]",
    "plotnine", # for plotting
    "pyro-ppl", # for Dirichlet Multinomial likelihood
    "scikit-bio >= 0.5.9", # for ratio transformation. might have compatibility issues with numpy, installing using conda?
]

[project.urls]
repository = "https://github.com/JiayuSuPKU/SPLISOSM"

[tool.setuptools]
packages.find = {where = ["."], exclude = ["docs", "tests", "scripts"]}