[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "splisosm"
dynamic = ["version"]
description = "Spatial isoform statistical modeling (SPLISOSM)"
authors = [
  {name = "Jiayu Su"}
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.11, <4.0"

dependencies = [
    "numpy",
    "pandas",
    "torch",
    "scipy",
    "tqdm",
    "scikit-learn",
    "matplotlib",
    "anndata"
]

[project.optional-dependencies]
dev = [
    "scanpy[leiden]",
    "plotnine", # for plotting
    "pyro-ppl", # for Dirichlet Multinomial likelihood
    "scikit-bio >= 0.6", # for ratio transformation.
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "setuptools-scm",
]
sdata = [
    "spatialdata",
    "spatialdata-io",
    "spatialdata-plot"
]
gp = [
    "gpytorch",
    "linear-operator",
    "finufft"
]
docs = [
    "sphinx",
    "jupyterlab",
    "sphinx-book-theme",
    "sphinxcontrib-bibtex",
    "sphinx-autoapi",
    "myst-nb",
    "myst-sphinx-gallery",
    "setuptools-scm",
]

[project.urls]
repository = "https://github.com/JiayuSuPKU/SPLISOSM"

[tool.setuptools]
packages.find = {where = ["."], exclude = ["docs", "docs.*", "tests", "tests.*", "scripts", "scripts.*"]}

[tool.setuptools_scm]
write_to = "splisosm/_version.py"
fallback_version = "1.1.1"
